it is about comment

--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-    <script src="jspm_packages/system.js"></script>
-    <script src="config.js"></script>
-    <script>
-        System.import('./app/main');
-    </script>
+
 </head>
 <body>
- aaaa 啊啊  东方大厦啊啊茶厂村
+
 <div class="ui container" style="padding: 30px">
-    <button class="ui green button" >hello</button>
+   <!-- <button class="ui green button" >helloa</button>-->
+	<div id="app">aa</div>
 </div>
 </body>
 
 
-
+<script src="jspm_packages/system.js"></script>
+<script src="config.js"></script>
+<script>
+    System.import('app/main');
+</script>
 </html>
