it is  for react router

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-hans">
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
@@ -9,14 +9,15 @@
 
 <div class="ui container" style="padding: 30px">
    <!-- <button class="ui green button" >helloa</button>-->
-	<div id="app">aa</div>
+	<div id="app"></div>
 </div>
 </body>
-
 
 <script src="jspm_packages/system.js"></script>
 <script src="config.js"></script>
 <script>
     System.import('app/main');
+// 		console.log(window.location.port);
+// console.log(window.location.hash);
 </script>
 </html>
